--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.4",
+    "axios": "^0.26.1",
+    "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-loading": "^2.0.3",
+    "react-modal": "^3.14.4",
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
